--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Aceita passar o resto da vida comigo? </h2>
         
 
-        <a href="https://youtu.be/cNGjD0VG4R8?t=63">
+        <a href="https://www.youtube.com/shorts/3V4ygtZWCa0">
             <button id="sim" > Sim! </button>
         </a>
         <button onmouseover="fuja()" id="nao"> Não! </button>
